--- a/Deep_learning/cnn.ipynb
+++ b/Deep_learning/cnn.ipynb
@@ -150,7 +150,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "![avatar](interpolate.png)"
+    "![avatar](image/interpolate.png)"
    ]
   },
   {
