--- a/Project/xgboost做期货时间序列/时间序列.ipynb
+++ b/Project/xgboost做期货时间序列/时间序列.ipynb
@@ -17,6 +17,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "原文https://mp.weixin.qq.com/s/REEiPA88r4pzWVsClsMUPg"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 4,
    "metadata": {},
