--- a/Deep_learning/rnn.ipynb
+++ b/Deep_learning/rnn.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -59,6 +59,50 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "![avatar](image/rnn2.jpg)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "从上面图可以看出torch.ones(seq_len,batch_size,input_size)，这样一个输入数据第一个维度是序列 也就是I,hate,this这三  \n",
+    "batch_size相当于该序列位置上所有批次数据，input_size是该序列特征维度。  \n",
+    "[batch_size,input_size] * [input_size,out_size] 就是X*W的"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "# 建立输入到输出"
    ]
   },
@@ -76,29 +120,42 @@
     "batch_size是输入多少条数据  \n",
     "seq_len是循环的长度，比如根据前n天天气的n，前n天股票信息的n  \n",
     "input_size是每一天的信息维度  \n",
-    "hidden_size是输出的数据维度"
+    "hidden_size是神经元数量"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [],
    "source": [
-    "batch_size = 5\n",
-    "seq_len = 3\n",
-    "input_size = 4\n",
-    "hidden_size = 2\n",
-    "num_layers = 1"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 39,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "cell = nn.RNN(input_size = input_size,hidden_size = hidden_size,num_layers = num_layers,batch_first=True)"
+    "class Net(nn.Module):\n",
+    "    def __init__(self,input_size,hidden_size,num_layers,num_classes):\n",
+    "        super().__init__()\n",
+    "        self.input_size = input_size\n",
+    "        self.hidden_size = hidden_size\n",
+    "        self.num_layers = num_layers\n",
+    "        self.output_size = num_classes\n",
+    "        self.rnn = nn.RNN(\n",
+    "            input_size=self.input_size,\n",
+    "            hidden_size=self.hidden_size,\n",
+    "            num_layers=self.num_layers,\n",
+    "            batch_first=False,\n",
+    "        )\n",
+    "        for p in self.rnn.parameters():\n",
+    "          nn.init.normal_(p, mean=0.0, std=0.001)\n",
+    "\n",
+    "        self.linear = nn.Linear(self.hidden_size, self.output_size)\n",
+    "\n",
+    "    def forward(self, x):\n",
+    "       # x维度是[seq,batch,feature] \n",
+    "       # h0维度是[num_layers,batch,hidden_size]\n",
+    "       h0 = torch.zeros(self.num_layers, x.size(1), self.hidden_size)\n",
+    "       out, hidden = self.rnn(x, h0)\n",
+    "       out = out.view(-1, self.hidden_size)\n",
+    "       out = self.linear(out)\n",
+    "       out = out.unsqueeze(dim=0)\n",
+    "       return out, hidden"
    ]
   },
   {
@@ -110,126 +167,84 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 54,
    "metadata": {},
    "outputs": [],
    "source": [
-    "inputs = torch.ones(batch_size,seq_len,input_size)\n",
-    "hidden = torch.zeros(num_layers,batch_size,hidden_size)"
+    "batch_size = 5\n",
+    "seq_len = 3\n",
+    "input_size = 4\n",
+    "hidden_size = 2\n",
+    "num_layers = 2\n",
+    "num_classes = 1\n",
+    "model = Net(input_size,hidden_size,num_layers,num_classes)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 55,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "x = torch.ones(seq_len,batch_size,input_size)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 56,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "output,hidden = model(x)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 57,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(torch.Size([5, 3, 4]), torch.Size([1, 5, 2]))"
+       "(torch.Size([1, 15, 1]), torch.Size([2, 5, 2]))"
       ]
      },
-     "execution_count": 41,
+     "execution_count": 57,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "inputs.shape,hidden.shape"
+    "output.shape,hidden.shape"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "tensor([[1., 1., 1., 1.],\n",
-       "        [1., 1., 1., 1.],\n",
-       "        [1., 1., 1., 1.]])"
-      ]
-     },
-     "execution_count": 45,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "inputs[0]"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "第一个数据的维度是3，4"
-   ]
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "(torch.Size([5, 3, 2]), torch.Size([1, 5, 2]))"
-      ]
-     },
-     "execution_count": 43,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "out,hidden = cell(inputs,hidden)\n",
-    "out.shape,hidden.shape"
-   ]
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "(tensor([[[-0.7220,  0.9815],\n",
-       "          [-0.3707,  0.9855],\n",
-       "          [-0.4992,  0.9907]],\n",
-       " \n",
-       "         [[-0.7220,  0.9815],\n",
-       "          [-0.3707,  0.9855],\n",
-       "          [-0.4992,  0.9907]],\n",
-       " \n",
-       "         [[-0.7220,  0.9815],\n",
-       "          [-0.3707,  0.9855],\n",
-       "          [-0.4992,  0.9907]],\n",
-       " \n",
-       "         [[-0.7220,  0.9815],\n",
-       "          [-0.3707,  0.9855],\n",
-       "          [-0.4992,  0.9907]],\n",
-       " \n",
-       "         [[-0.7220,  0.9815],\n",
-       "          [-0.3707,  0.9855],\n",
-       "          [-0.4992,  0.9907]]], grad_fn=<TransposeBackward1>),\n",
-       " tensor([[[-0.4992,  0.9907],\n",
-       "          [-0.4992,  0.9907],\n",
-       "          [-0.4992,  0.9907],\n",
-       "          [-0.4992,  0.9907],\n",
-       "          [-0.4992,  0.9907]]], grad_fn=<StackBackward>))"
-      ]
-     },
-     "execution_count": 44,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "out,hidden"
-   ]
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
