--- a/Deep_learning/rnn.ipynb
+++ b/Deep_learning/rnn.ipynb
@@ -226,18 +226,42 @@
    "source": []
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "# LSTM"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# input_size 输入特征的大小\n",
+    "# hidden_size 神经元模块额数量\n",
+    "# num_layer 几层隐藏层\n",
+    "# lstm默认输入的维度是 (seq_len,batch,feature)\n",
+    "class LSTM(nn.Module):\n",
+    "    def __init__(self):\n",
+    "        super().__init__()\n",
+    "        self.lstm = torch.nn.LSTM(\n",
+    "            input_size = 28,\n",
+    "            hidden_size = 64,\n",
+    "            num_layer = 1,\n",
+    "            batch_first = False\n",
+    "        )\n",
+    "        self.out = torch.nn.Liner(in_features = 64,out_feature = 10)\n",
+    "\n",
+    "    def forward(self, x):\n",
+    "        x = x.view(-1,28,28)\n",
+    "        # output [batch,seq_len,hidden_size]包含每个序列的输出结果\n",
+    "        # h_n [num_layers,batch,hidden_size]只包含最后一个序列的输出\n",
+    "        # c_n [num_layers,batch,hidden_size]只包含最后一个序列的输出\n",
+    "        # h是最终输出，c是模块里cell的输出 \n",
+    "        output,(h_n,c_n) = self.lstm(x)\n",
+    "       "
+   ]
   },
   {
    "cell_type": "code",
