--- a/Maching_learning/多分类.ipynb
+++ b/Maching_learning/多分类.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "d35c4432",
+   "id": "24bc8459",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b9fdfb9e",
+   "id": "f03b9466",
    "metadata": {},
    "source": [
     "# 评价指标"
@@ -23,7 +23,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "45f67bbf",
+   "id": "f94a310f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -34,7 +34,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "bba3d105",
+   "id": "383d7443",
    "metadata": {},
    "outputs": [
     {
@@ -58,7 +58,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "906642f7",
+   "id": "df8673dd",
    "metadata": {},
    "outputs": [
     {
@@ -83,7 +83,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "381a39df",
+   "id": "20cd2bc9",
    "metadata": {},
    "outputs": [
     {
@@ -103,7 +103,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f8dda688",
+   "id": "d8cd1370",
    "metadata": {},
    "source": [
     "# 准备数据"
@@ -112,7 +112,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "ea61f4db",
+   "id": "cca458ab",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -121,8 +121,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
-   "id": "974738e7",
+   "execution_count": 9,
+   "id": "14d30210",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -131,8 +131,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
-   "id": "7a4007c0",
+   "execution_count": 11,
+   "id": "175528a8",
    "metadata": {},
    "outputs": [
     {
@@ -147,7 +147,7 @@
        "       2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2])"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -158,73 +158,22 @@
   },
   {
    "cell_type": "markdown",
-   "id": "514cbcfd",
+   "id": "36e566a7",
    "metadata": {},
    "source": [
-    "# sklearn的数据标签貌似都是一维，这里手工整理下"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 9,
-   "id": "068ddffd",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from sklearn import preprocessing\n",
-    "enc = preprocessing.OneHotEncoder()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 10,
-   "id": "bb19728a",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "OneHotEncoder()"
-      ]
-     },
-     "execution_count": 10,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "enc.fit(data['target'].reshape(-1,1))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 11,
-   "id": "11b8ed03",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "multi_label = enc.transform(data['target'].reshape(-1,1)).toarray()"
+    "# 机器学习方法"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "a3812323",
+   "id": "a4901729",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([[1., 0., 0.],\n",
-       "       [1., 0., 0.],\n",
-       "       [1., 0., 0.],\n",
-       "       [1., 0., 0.],\n",
-       "       [1., 0., 0.],\n",
-       "       [1., 0., 0.],\n",
-       "       [1., 0., 0.],\n",
-       "       [1., 0., 0.],\n",
-       "       [1., 0., 0.],\n",
-       "       [1., 0., 0.]])"
+       "((150, 4), (150,))"
       ]
      },
      "execution_count": 12,
@@ -233,72 +182,65 @@
     }
    ],
    "source": [
-    "multi_label[:10]"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "356e6f14",
-   "metadata": {},
-   "source": [
-    "# 机器学习方法"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 13,
-   "id": "f4d5f414",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "((150, 4), (150, 3))"
-      ]
-     },
-     "execution_count": 13,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
     "X = data['data']\n",
-    "Y = multi_label\n",
+    "Y = data['target']\n",
     "X.shape,Y.shape"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
-   "id": "d89e39df",
+   "execution_count": 13,
+   "id": "5e09c518",
    "metadata": {},
    "outputs": [],
    "source": [
-    "from sklearn import tree\n",
+    "from sklearn.linear_model import LogisticRegressionCV\n",
     "from sklearn.linear_model import SGDClassifier"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
-   "id": "6cdd2dd2",
+   "execution_count": 14,
+   "id": "437c5581",
    "metadata": {},
    "outputs": [],
    "source": [
-    "tr1 = tree.DecisionTreeClassifier()\n",
+    "clf1 = LogisticRegressionCV(penalty='l2', max_iter=50000)\n",
     "clf2 = SGDClassifier()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
-   "id": "70cd5758",
+   "execution_count": 15,
+   "id": "6127c8e2",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "DecisionTreeClassifier()"
+       "SGDClassifier()"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "clf1.fit(X,Y)\n",
+    "clf2.fit(X,Y)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "id": "f23b19d3",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(0.98, 0.8866666666666667)"
       ]
      },
      "execution_count": 16,
@@ -307,55 +249,32 @@
     }
    ],
    "source": [
-    "tr1.fit(X,Y)\n",
-    "# clf2.fit(X,Y)\n",
-    "# 逻辑回归不支持多维的y"
+    "clf1.score(X,Y),clf2.score(X,Y)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 17,
-   "id": "d45376ff",
+   "id": "0b7e1e1f",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "1.0"
-      ]
-     },
-     "execution_count": 17,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "tr1.score(X,Y)"
+    "predict = clf1.predict(X)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 18,
-   "id": "eb004d77",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "predict = tr1.predict(X)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 19,
-   "id": "5a35adc2",
+   "id": "6c3169f4",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "1.0"
+       "0.98"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -365,38 +284,8 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 20,
-   "id": "6c438281",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([[1., 0., 0.],\n",
-       "       [1., 0., 0.],\n",
-       "       [1., 0., 0.],\n",
-       "       [1., 0., 0.],\n",
-       "       [1., 0., 0.],\n",
-       "       [1., 0., 0.],\n",
-       "       [1., 0., 0.],\n",
-       "       [1., 0., 0.],\n",
-       "       [1., 0., 0.],\n",
-       "       [1., 0., 0.]])"
-      ]
-     },
-     "execution_count": 20,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "predict[:10]"
-   ]
-  },
-  {
    "cell_type": "markdown",
-   "id": "87b99e8a",
+   "id": "d7cae5dd",
    "metadata": {},
    "source": [
     "# 深度学习方法"
@@ -404,31 +293,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
-   "id": "5d9fabea",
+   "execution_count": 19,
+   "id": "620ded23",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "((150, 4), (150, 3))"
+       "((150, 4), (150, 1))"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "X = data['data']\n",
-    "Y = multi_label\n",
+    "Y = data['target'].reshape(-1,1)\n",
     "X.shape,Y.shape"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
-   "id": "8f41f1da",
+   "execution_count": 20,
+   "id": "69927edb",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -442,8 +331,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
-   "id": "b73487be",
+   "execution_count": 67,
+   "id": "9310ae04",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -467,8 +356,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
-   "id": "813713d2",
+   "execution_count": 68,
+   "id": "abeb3483",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -478,8 +367,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
-   "id": "112deeaa",
+   "execution_count": 69,
+   "id": "fe3f33f2",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -499,27 +388,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
-   "id": "dfc93577",
+   "execution_count": 74,
+   "id": "7f4ee5a7",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "torch.Size([50, 3]) torch.Size([50, 3])\n"
-     ]
-    },
-    {
-     "ename": "RuntimeError",
-     "evalue": "1D target tensor expected, multi-target not supported",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mRuntimeError\u001b[0m                              Traceback (most recent call last)",
-      "\u001b[1;32m<ipython-input-26-142958b01aa2>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m     17\u001b[0m         \u001b[0my\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0my\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0msqueeze\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     18\u001b[0m         \u001b[0mprint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0my\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mshape\u001b[0m\u001b[1;33m,\u001b[0m\u001b[0moutputs\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mshape\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 19\u001b[1;33m         \u001b[0mloss\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mF\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mnll_loss\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0moutputs\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0my\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     20\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     21\u001b[0m         \u001b[1;31m# Backward and optimize\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;32md:\\python\\python38\\lib\\site-packages\\torch\\nn\\functional.py\u001b[0m in \u001b[0;36mnll_loss\u001b[1;34m(input, target, weight, size_average, ignore_index, reduce, reduction)\u001b[0m\n\u001b[0;32m   2386\u001b[0m         )\n\u001b[0;32m   2387\u001b[0m     \u001b[1;32mif\u001b[0m \u001b[0mdim\u001b[0m \u001b[1;33m==\u001b[0m \u001b[1;36m2\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m-> 2388\u001b[1;33m         \u001b[0mret\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mtorch\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0m_C\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0m_nn\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mnll_loss\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0minput\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mtarget\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mweight\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0m_Reduction\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mget_enum\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mreduction\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mignore_index\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m   2389\u001b[0m     \u001b[1;32melif\u001b[0m \u001b[0mdim\u001b[0m \u001b[1;33m==\u001b[0m \u001b[1;36m4\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m   2390\u001b[0m         \u001b[0mret\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mtorch\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0m_C\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0m_nn\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mnll_loss2d\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0minput\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mtarget\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mweight\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0m_Reduction\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mget_enum\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mreduction\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mignore_index\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;31mRuntimeError\u001b[0m: 1D target tensor expected, multi-target not supported"
+      "Epoch [1/6000], Step [1/3], Loss: 1.1151\n",
+      "Epoch [501/6000], Step [1/3], Loss: 0.4803\n",
+      "Epoch [1001/6000], Step [1/3], Loss: 0.3424\n",
+      "Epoch [1501/6000], Step [1/3], Loss: 0.2248\n",
+      "Epoch [2001/6000], Step [1/3], Loss: 0.1306\n",
+      "Epoch [2501/6000], Step [1/3], Loss: 0.1390\n",
+      "Epoch [3001/6000], Step [1/3], Loss: 0.1088\n",
+      "Epoch [3501/6000], Step [1/3], Loss: 0.1066\n",
+      "Epoch [4001/6000], Step [1/3], Loss: 0.0933\n",
+      "Epoch [4501/6000], Step [1/3], Loss: 0.0567\n",
+      "Epoch [5001/6000], Step [1/3], Loss: 0.0341\n",
+      "Epoch [5501/6000], Step [1/3], Loss: 0.0641\n"
      ]
     }
    ],
@@ -541,8 +429,7 @@
     "        outputs = model(x)\n",
     "        # 扁平化成一维\n",
     "        y = y.squeeze()\n",
-    "        print(y.shape,outputs.shape)\n",
-    "        loss = F.nll_loss(outputs, y)\n",
+    "        loss = criterion(outputs, y)\n",
     "\n",
     "        # Backward and optimize\n",
     "        optimizer.zero_grad()\n",
@@ -557,7 +444,7 @@
   {
    "cell_type": "code",
    "execution_count": 75,
-   "id": "4211dbf9",
+   "id": "46603498",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -567,7 +454,7 @@
   {
    "cell_type": "code",
    "execution_count": 77,
-   "id": "80ef7912",
+   "id": "30bd2c41",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -578,7 +465,7 @@
   {
    "cell_type": "code",
    "execution_count": 78,
-   "id": "d1e877bb",
+   "id": "35225597",
    "metadata": {},
    "outputs": [
     {
@@ -599,7 +486,7 @@
   {
    "cell_type": "code",
    "execution_count": 79,
-   "id": "428a5e9a",
+   "id": "3e489ec4",
    "metadata": {},
    "outputs": [
     {
@@ -625,7 +512,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a6302dd9",
+   "id": "578c6a61",
    "metadata": {},
    "source": [
     "# 集成方法"
@@ -634,7 +521,7 @@
   {
    "cell_type": "code",
    "execution_count": 80,
-   "id": "5e015339",
+   "id": "5daa7274",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -644,7 +531,7 @@
   {
    "cell_type": "code",
    "execution_count": 89,
-   "id": "fe6d3dc4",
+   "id": "fa586306",
    "metadata": {},
    "outputs": [
     {
@@ -667,7 +554,7 @@
   {
    "cell_type": "code",
    "execution_count": 90,
-   "id": "642791f3",
+   "id": "7fec3122",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -678,7 +565,7 @@
   {
    "cell_type": "code",
    "execution_count": 99,
-   "id": "dddf32cf",
+   "id": "dc682ce9",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -703,7 +590,7 @@
   {
    "cell_type": "code",
    "execution_count": 100,
-   "id": "8debc3f1",
+   "id": "df75e725",
    "metadata": {},
    "outputs": [
     {
@@ -934,7 +821,7 @@
   {
    "cell_type": "code",
    "execution_count": 101,
-   "id": "d8fc58b3",
+   "id": "af01776f",
    "metadata": {},
    "outputs": [
     {
@@ -965,7 +852,7 @@
   {
    "cell_type": "code",
    "execution_count": 102,
-   "id": "e36453d1",
+   "id": "5b61b634",
    "metadata": {},
    "outputs": [
     {
@@ -987,7 +874,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "29c698ef",
+   "id": "353eecb3",
    "metadata": {},
    "outputs": [],
    "source": []
