--- a/Deep_learning/Loss Function.ipynb
+++ b/Deep_learning/Loss Function.ipynb
@@ -2,8 +2,8 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "id": "3eb94db5",
+   "execution_count": 1,
+   "id": "fc0a244d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "21481f20",
+   "id": "5fda408d",
    "metadata": {},
    "source": [
     "# 均方误差"
@@ -22,8 +22,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 103,
-   "id": "3e0e8760",
+   "execution_count": 2,
+   "id": "e28332df",
    "metadata": {},
    "outputs": [
     {
@@ -51,8 +51,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 104,
-   "id": "1dda045c",
+   "execution_count": 3,
+   "id": "573b5c2d",
    "metadata": {},
    "outputs": [
     {
@@ -61,7 +61,7 @@
        "tensor(4.)"
       ]
      },
-     "execution_count": 104,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -73,7 +73,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "68ba0f31",
+   "id": "4bbc00bc",
    "metadata": {},
    "source": [
     "# 二分类交叉熵"
@@ -81,8 +81,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 106,
-   "id": "689c0e4f",
+   "execution_count": 4,
+   "id": "cc8d0c56",
    "metadata": {},
    "outputs": [
     {
@@ -111,7 +111,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8d257d71",
+   "id": "33776a10",
    "metadata": {},
    "source": [
     "$\\frac{-1}{n}\\sum_{n}^{i}(y[i]*log(y_{pre}[i]))+(1-y[i])*log(1-y_{pre}[i])$"
@@ -119,8 +119,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 107,
-   "id": "7eb7b40f",
+   "execution_count": 5,
+   "id": "ee6c7926",
    "metadata": {},
    "outputs": [
     {
@@ -129,7 +129,7 @@
        "tensor(0.5001)"
       ]
      },
-     "execution_count": 107,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -142,7 +142,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "beade041",
+   "id": "15d906d9",
    "metadata": {},
    "source": [
     "# 多分类交叉熵"
@@ -150,8 +150,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 111,
-   "id": "9ca53564",
+   "execution_count": 6,
+   "id": "59174375",
    "metadata": {},
    "outputs": [
     {
@@ -188,8 +188,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 109,
-   "id": "9d1fa560",
+   "execution_count": 7,
+   "id": "7afbe2e5",
    "metadata": {},
    "outputs": [
     {
@@ -201,7 +201,7 @@
        "        [-0.6184, -1.4184, -1.5184]])"
       ]
      },
-     "execution_count": 109,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -212,7 +212,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "201a8eb5",
+   "id": "d1c312ef",
    "metadata": {},
    "source": [
     "# 多分类第二种方式"
@@ -220,8 +220,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 112,
-   "id": "60e7f30c",
+   "execution_count": 8,
+   "id": "6766a105",
    "metadata": {},
    "outputs": [
     {
@@ -256,7 +256,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6916e3d6",
+   "id": "8ffb33e9",
    "metadata": {},
    "source": [
     "<font color=#A52A2A size=4 >nn.NLLLoss的输入target是类别值，并不是one-hot编码格式，这个要注意！！  \n",
@@ -265,7 +265,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "217e216e",
+   "id": "2578d443",
    "metadata": {},
    "source": [
     "$loss(x,class) = -log(\\frac{exp^{x[class]}}{\\sum exp^{x[i]}})$"
@@ -273,17 +273,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 118,
-   "id": "2bea2215",
+   "execution_count": 9,
+   "id": "074c3deb",
    "metadata": {},
    "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[-0.61836904, -0.5950598, -0.61836904, -0.61836904]\n"
+     ]
+    },
     {
      "data": {
       "text/plain": [
        "0.6125417351722717"
       ]
      },
-     "execution_count": 118,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -298,20 +305,100 @@
     "def cross_entropy_np(x, y):\n",
     "    x_softmax = [softmax(x[i]) for i in range(len(x))]\n",
     "    x_log = [np.log(x_softmax[i][y[i]]) for i in range(len(y))]\n",
+    "    print(x_log)\n",
     "    loss = - np.sum(x_log) / len(y)\n",
     "    return loss\n",
     "cross_entropy_np(y_pre1.numpy(), y.numpy())"
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "23b7d07a",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(array([[1. , 0.2, 0.1],\n",
+       "        [0.1, 1. , 0.1],\n",
+       "        [0.1, 0.2, 1. ],\n",
+       "        [1. , 0.2, 0.1]], dtype=float32),\n",
+       " array([0, 1, 2, 0], dtype=int64))"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# 计算某个数的loss\n",
+    "num = 3\n",
+    "y_pre1.numpy(),y.numpy()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "ec13bed6",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(0, 2.7182817, 5.044855)"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# c表示这个数的类别，对应就是y这个标签的值\n",
+    "c = y.numpy()[num]\n",
+    "c,np.exp(y_pre1.numpy()[num][c]),np.sum(np.exp(y_pre1.numpy()[num]))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "id": "89465492",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "-0.61836904"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.log(np.exp(y_pre1.numpy()[num][c])/np.sum(np.exp(y_pre1.numpy()[num])))"
+   ]
+  },
+  {
    "cell_type": "markdown",
-   "id": "51ef8fb4",
+   "id": "529ad25d",
    "metadata": {},
    "source": [
     "BCELoss是Binary CrossEntropyLoss的缩写，BCELoss是CrossEntropyLoss的一个特例，只用于二分类问题，而CrossEntropyLoss可以用于二分类，也可以用于多分类。  \n",
     "使用nn.BCELoss需要在该层前面加上Sigmoid函数。  \n",
     "使用nn.CrossEntropyLoss会自动加上Softmax层。  "
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "7e416c4b",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
